# unitTestEngine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml
engine/: CMakeLists.txt  unitTestEngine.h
testLib/: CMakeLists.txt  ITestInterface.h  TestObject.cpp  TestObject.h
tests/: CMakeLists.txt  engineTest.cpp  libraryTest.cpp
